# AWS-Rekognition-SAM-Labeling-App

./: README.md  pyproject.toml
