[project]
name = "meta-sam-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "pycocotools>=2.0.11",
    "sagemaker>=3.3.0",
    "segment-anything",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
